Use assembly plugin for packaging